data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_470.wast
;; 1. **Test Description**: Include a `loop` instruction with a `br_if` instruction that incorrectly evaluates the loop condition. The loop should ideally terminate based on a stack predicate, but due to errors in the `br_if` condition handling, it results in an infinite loop.    **Constraint**: Checking condition evaluation in `br_if` leading to constant loop continuation.    **Infinite Loop Relevance**: Ensures that faulty condition checks do not inadvertently cause infinite loops.

(assert_invalid
  (module (func $infinite-loop-via-br_if
    (i32.const 0)
    (loop (block
      (br_if 1 (i32.const 1))
      (i32.const 0)
      (br 0)
    ))
  ))
  "infinite loop due to br_if condition error"
)